class requirement:
    def __init__(self, id, reqText):
        self.Id = id  # Assuming int type
        self.reqText = reqText  # Assuming string type
