@startuml class

class artifacts {
    - path2Artifacts: string
    - namespace: string
    - _dictionary: dictionary

    + load_artifacts(): void
    + initialize_dictionary(): dictionary
}

class artifact {
    - path: str
    - name: str
    - namespace: dict
    - _df: DataFrame
    - _cleanText: list
    - _bow: list
    
    + initialize_df(): DataFrame
    + initialize_clean_text(): list
    + initialize_bow(dictionary: dict): list
    + df: DataFrame
    + clean_text: list
    + bow: list
}

class requirement {
    + Id                        : int
    + reqText                   : string
}

artifacts   "1" *-- "*" artifact
artifact    "1" *-- "*" requirement
@enduml

